# pyofiles

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
python/pyofiles/: __init__.py  __main__.py  cli.py
src/: lib.rs
tests/: test_pyofiles.py
