[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyofiles"
version = "0.1.0"
description = "Fast, Rust-powered file operations for Python"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
keywords = ["files", "filesystem", "rust", "fast", "parallel", "walk", "find", "glob"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: System :: Filesystems",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.12.6",
]
